# DHT

./: CMakeLists.txt  README.md
examples/esp32/: CMakeLists.txt  dht.lf  dht_esp.c  dht_hal.c
examples/esp32/include/: dht_esp.h
include/: dht.h
src/: dht.c  stubs.c
tests/: main.c
